# django-agent-rag

./: .gitignore  .python-version  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml  python-publish.yml
examples/demo_project/config/: celery.py  settings.py  urls.py
examples/demo_project/demo_app/: apps.py  views.py
src/django_agent_rag/: __init__.py  admin.py  apps.py  celery_tasks.py  checks.py  exceptions.py  managers.py  models.py  settings.py  signals.py  temporal.py  temporal_worker.py  types.py
src/django_agent_rag/backends/embeddings/: __init__.py  base.py  fake.py
src/django_agent_rag/backends/llm/: __init__.py  base.py  fake.py
src/django_agent_rag/backends/tasks/: __init__.py  base.py  celery_backend.py  sync.py  temporal_backend.py
src/django_agent_rag/chunkers/: __init__.py  base.py  simple.py
src/django_agent_rag/management/: __init__.py
src/django_agent_rag/management/commands/: rag_delete_document.py  rag_ingest_text.py  rag_reembed_document.py  rag_reindex_document.py  rag_show_stats.py
src/django_agent_rag/migrations/: 0001_initial.py
src/django_agent_rag/retrievers/: __init__.py  base.py  pgvector.py
src/django_agent_rag/services/: __init__.py  ask.py  chunking.py  embeddings.py  ingestion.py  retrieval.py
tests/: conftest.py  settings.py  test_ask.py  test_chunking.py  test_ingestion.py  test_migrations.py  test_models.py  test_providers.py  test_retrieval.py  test_settings.py  test_task_backends.py
